# webpcon

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: unit-tests.yaml
webp_converter/: __init__.py  __main__.py  cli.py  converter.py
webpcon/: __main__.py  cli.py  converter.py
webpcon/tests/: ConverterTests.py  __init__.py
