[project]
name = "webpcon"
description = "Converts webp to either PNG or JPG."
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = ["pillow"]
authors = [ {name = "Techi-Freki", email = "techifreki@proton.me"} ]
maintainers = [ {name = "Techi-Freki", email = "techifreki@proton.me"} ]
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3.8"
]

[project.urls]
Repository = "https://github.com/Techi-Freki/webpcon.git"

[tool.coverage.run]
branch = true
omit = [ "*/tests/*.py" ]
